# BTL_NLP_K2_2526

./: .gitignore  pyproject.toml
notebooks/: Qwen_A100_trained.ipynb  Qwen_origin_val.ipynb  eda.ipynb  eda_train_val_test_1.ipynb  transformer_2017_L4_22GB_improved_trained.ipynb  transformer_2017_L4_22GB_trained.ipynb  transformer_scratch_with_dataset_training.ipynb  vit5_large_A100_40GB_trained.ipynb  vit5_large_A100_test.ipynb  vit5_large_Hieu_6_6_2026.ipynb  vit5_large_origin _ran.ipynb  vit5_large_origin_trained.ipynb
src/chuong/: attention.py  feed_forward.py  normalization.py  projection.py  transformer.py
src/transformer_scratch/: builder.py  decoder.py  embedding.py  encoder.py  masks.py  normalization.py  positional_encoding.py  residual.py  transformer.py
