[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "rouge-score>=0.1.2",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]
